# seer

./: .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  data.json
src/: cli.rs  color.rs  digits.rs  lib.rs  main.rs  state.rs  utils.rs
