[package]
name = "seer"
version = "0.1.0"
authors = ["Ingi Thor Sigurdsson <ingisigurds@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.0"
#serde = { version = "1.0.104", features = ["derive"] }
#serde_json = "1.0"
termion = "1.5.5"
